<resources>
    <string name="app_name">Calculadora</string>
    <string name="stringDivision">/</string>
    <string name="stringMultiplicacion">*</string>
    <string name="stringSuma">+</string>
    <string name="stringResta">-</string>
    <string name="stringResultado">00.00</string>
    <string name="stringMMas">M+</string>
    <string name="stringMMenos">M-</string>
    <string name="stringValor"></string>
    <string name="stringMR">MR</string>
    <string name="string4">4</string>
    <string name="string2">2</string>
    <string name="string3">3</string>
    <string name="stringPunto">.</string>
    <string name="string0">0</string>
    <string name="string1">1</string>
    <string name="string5">5</string>
    <string name="string6">6</string>
    <string name="string7">7</string>
    <string name="string8">8</string>
    <string name="string9">9</string>
    <string name="stringFactorial">!</string>
    <string name="stringPotencia">^</string>
    <string name="stringIgual">=</string>
    <string name="stringParentesisIzquierdo">(</string>
    <string name="stringParentesisDerecho">)</string>
    <string name="stringMod">mod</string>
    <string name="stringBorrar">DEL</string>
    <string name="stringBorrarTodo">C</string>
    <string name="log">log</string>
    <string name="raiz">sqrt</string>
    <string name="stringCoseno">cos</string>
    <string name="sen">sen</string>
    <string name="tan">tan</string>
    <string name="stringBin">BIN</string>
    <string name="oct">oct</string>
    <string name="hex">hex</string>
    <string name="stringGraficaSeno">Gráfica Seno</string>
    <string name="gr_fica_coseno">Gráfica Coseno</string>
    <string name="gr_fica_tangente">Gráfica Tangente</string>
</resources>
