<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraVista">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stringResultado"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperacion" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/miGrid"
        android:layout_width="373dp"
        android:layout_height="486dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado">

        <Button
            android:id="@+id/btnMod"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringMod"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnMMenos"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringMMenos"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="6" />

        <Button
            android:id="@+id/btnMR"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringMR"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="6" />

        <Button
            android:id="@+id/btnMMas"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringMMas"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="6" />

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringSuma"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string0"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string1"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringPunto"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringIgual"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string3"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string2"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string4"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string5"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string6"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnParenIz"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringParentesisIzquierdo"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnParenDer"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringParentesisDerecho"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringBorrar"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string7"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string8"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/string9"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnResta"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringResta"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMultiplicacion"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringMultiplicacion"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringDivision"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnFactorial"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringFactorial"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnExponente"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringPotencia"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnBorrarTodo"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringBorrarTodo"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/log"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/btnRaiz"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/raiz"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="6" />

        <Button
            android:id="@+id/btnCoseno"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringCoseno"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="7" />

        <Button
            android:id="@+id/btnSen"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/sen"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="7" />

        <Button
            android:id="@+id/btnTangente"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/tan"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="7" />

        <Button
            android:id="@+id/btnBinario"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/stringBin"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="8" />

        <Button
            android:id="@+id/btnOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oct"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="8" />

        <Button
            android:id="@+id/btnHex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="8" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:gravity="end"
        android:id="@+id/txtOperacion"
        android:layout_width="353dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/stringValor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>